--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -86,8 +86,9 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/Encounter.Encounter
 OpenAssetsAtExit=/Game/EncounterScene/Map/EncounterValues.EncounterValues
 OpenAssetsAtExit=/Game/AdvancedTurnBasedTileToolkit/Maps/Advanced/Tiles/BP_GA_Tile_Box_02.BP_GA_Tile_Box_02
-OpenAssetsAtExit=/Game/EncounterScene/Map/EncounterSetting.EncounterSetting
+OpenAssetsAtExit=/Game/AdvancedTurnBasedTileToolkit/Maps/MP/Core/BP_Instance_ATBTT.BP_Instance_ATBTT
 OpenAssetsAtExit=/Game/EncounterScene/GameMode/EncounterPanel.EncounterPanel
+OpenAssetsAtExit=/Game/EncounterScene/GameMode/Layer_Change.Layer_Change
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -528,6 +529,9 @@ REINST_Layer_Change_C_445.Tags=True
 REINST_Layer_Change_C_445.Cooking=True
 REINST_Layer_Change_C_445.Input=True
 REINST_Layer_Change_C_445.Actor=True
+BP_Instance_ATBTT_C.Default=True
+UserDefinedStruct.Structure=True
+UserDefinedStruct.DefaultValues=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/EncounterScene/Map/EncounterSetting.EncounterSetting;
@@ -1201,6 +1205,7 @@ LastLogListing=AssetTools
 /Game/EncounterScene/Map/EncounterLevelValues.EncounterLevelValues=0
 /Game/AdvancedTurnBasedTileToolkit/Maps/MP/Core/BP_Instance_ATBTT.BP_Instance_ATBTT=0
 /Game/AdvancedTurnBasedTileToolkit/Maps/Advanced/Tiles/BP_GA_Tile_Box_02.BP_GA_Tile_Box_02=0
+/Game/EncounterScene/Map/EncounterSetting.EncounterSetting=0
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
