--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,9 +8,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/AdvancedTurnBasedTileToolkit/Maps/Example.Example
+EditorStartupMap=/Game/Map/ULA.ULA
 GameInstanceClass=/Game/AdvancedTurnBasedTileToolkit/Maps/MP/Core/BP_Instance_ATBTT.BP_Instance_ATBTT_C
-GameDefaultMap=/Game/AdvancedTurnBasedTileToolkit/Maps/Example.Example
+GameDefaultMap=/Game/AdvancedTurnBasedTileToolkit/Maps/MP/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/AdvancedTurnBasedTileToolkit/Core/BP_ATBTT.BP_ATBTT_C
 
 [/Script/Engine.CollisionProfile]
