--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,12 +83,6 @@ LastLevel=/Game/Map/ULA
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/EncounterScene/GameMode/EncounterPanel.EncounterPanel
-OpenAssetsAtExit=/Game/AdvancedTurnBasedTileToolkit/Core/Units/BP_Unit.BP_Unit
-OpenAssetsAtExit=/Game/EncounterScene/GameMode/LayersManager.LayersManager
-OpenAssetsAtExit=/Game/Encounter.Encounter
-OpenAssetsAtExit=/Game/EncounterScene/Blueprints/GoToEncounter.GoToEncounter
-OpenAssetsAtExit=/Game/AdvancedTurnBasedTileToolkit/Units/BP_Unit_Anim_Auto.BP_Unit_Anim_Auto
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1229,13 +1223,13 @@ BP_GridActor_C=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 EncouterTestSettings_C=
-BP_Unit_Anim_Auto_C="\"Object.Config.Config|GridPlacement\" "
-BP_Unit_Anim_C="\"Object.Config.Config|GridPlacement\" "
+BP_Unit_Anim_Auto_C="\"Object.Config.Config"
+BP_Unit_Anim_C="\"Object.Config.Config"
 BP_Unit_C=
 Character=
 Pawn=
-REINST_BP_Unit_Anim_Auto_C_1245="\"Object.Config.Config|GridPlacement\" "
-REINST_BP_Unit_Anim_Auto_C_1249="\"Object.Config.Config|GridPlacement\" "
+REINST_BP_Unit_Anim_Auto_C_1245="\"Object.Config.Config"
+REINST_BP_Unit_Anim_Auto_C_1249="\"Object.Config.Config"
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
