--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-3G34NEP
 LastExecutedLaunchName=DESKTOP-3G34NEP
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=-123,Y=535)
+NewWindowPosition=(X=320,Y=155)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -84,11 +84,12 @@ LastLevel=/Game/Map/ULA
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/EncounterScene/GameMode/EncounterPanel.EncounterPanel
-OpenAssetsAtExit=/Game/AdvancedTurnBasedTileToolkit/Core/Units/BP_Unit.BP_Unit
-OpenAssetsAtExit=/Game/EncounterScene/GameMode/LayersManager.LayersManager
-OpenAssetsAtExit=/Game/Encounter.Encounter
 OpenAssetsAtExit=/Game/EncounterScene/Blueprints/GoToEncounter.GoToEncounter
+OpenAssetsAtExit=/Game/Encounter.Encounter
 OpenAssetsAtExit=/Game/AdvancedTurnBasedTileToolkit/Units/BP_Unit_Anim_Auto.BP_Unit_Anim_Auto
+OpenAssetsAtExit=/Game/AdvancedTurnBasedTileToolkit/Core/BP_ATBTT.BP_ATBTT
+OpenAssetsAtExit=/Game/Map/ULA.ULA:PersistentLevel.ULA
+OpenAssetsAtExit=/Game/AdvancedTurnBasedTileToolkit/Maps/MP/Core/BP_Instance_ATBTT.BP_Instance_ATBTT
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1194,6 +1195,49 @@ REINST_BP_Unit_Anim_Auto_C_1249.Camera=True
 REINST_BP_Unit_Anim_Auto_C_1249.Pawn=True
 REINST_BP_Unit_Anim_Auto_C_1249.Input=True
 REINST_BP_Unit_Anim_Auto_C_1249.Actor=True
+REINST_BP_Unit_Anim_Auto_C_122.TransformCommon=True
+REINST_BP_Unit_Anim_Auto_C_122.Animation=True
+REINST_BP_Unit_Anim_Auto_C_122.Mesh=True
+REINST_BP_Unit_Anim_Auto_C_122.Config=True
+REINST_BP_Unit_Anim_Auto_C_122.Physics=True
+REINST_BP_Unit_Anim_Auto_C_122.Collision=True
+REINST_BP_Unit_Anim_Auto_C_122.Lighting=True
+REINST_BP_Unit_Anim_Auto_C_122.DO NOT EDIT=True
+REINST_BP_Unit_Anim_Auto_C_122.Rendering=True
+REINST_BP_Unit_Anim_Auto_C_122.Clothing=True
+REINST_BP_Unit_Anim_Auto_C_122.ClothingSimulation=True
+REINST_BP_Unit_Anim_Auto_C_122.Tags=True
+REINST_BP_Unit_Anim_Auto_C_122.Activation=True
+REINST_BP_Unit_Anim_Auto_C_122.Cooking=True
+REINST_BP_Unit_Anim_Auto_C_122.Character Movement: Jumping / Falling=True
+REINST_BP_Unit_Anim_Auto_C_122.Character Movement (General Settings)=True
+REINST_BP_Unit_Anim_Auto_C_122.Character Movement: Walking=True
+REINST_BP_Unit_Anim_Auto_C_122.Character Movement: Swimming=True
+REINST_BP_Unit_Anim_Auto_C_122.Character Movement: Flying=True
+REINST_BP_Unit_Anim_Auto_C_122.Character Movement: Custom Movement=True
+REINST_BP_Unit_Anim_Auto_C_122.Character Movement (Rotation Settings)=True
+REINST_BP_Unit_Anim_Auto_C_122.Character Movement: Physics Interaction=True
+REINST_BP_Unit_Anim_Auto_C_122.Character Movement (Networking)=True
+REINST_BP_Unit_Anim_Auto_C_122.Character Movement=True
+REINST_BP_Unit_Anim_Auto_C_122.Character Movement: Avoidance=True
+REINST_BP_Unit_Anim_Auto_C_122.Character Movement: NavMesh Movement=True
+REINST_BP_Unit_Anim_Auto_C_122.RootMotion=True
+REINST_BP_Unit_Anim_Auto_C_122.NavMovement=True
+REINST_BP_Unit_Anim_Auto_C_122.Velocity=True
+REINST_BP_Unit_Anim_Auto_C_122.PlanarMovement=True
+REINST_BP_Unit_Anim_Auto_C_122.MovementComponent=True
+REINST_BP_Unit_Anim_Auto_C_122.Shape=True
+REINST_BP_Unit_Anim_Auto_C_122.Navigation=True
+REINST_BP_Unit_Anim_Auto_C_122.Character=True
+REINST_BP_Unit_Anim_Auto_C_122.Camera=True
+REINST_BP_Unit_Anim_Auto_C_122.Pawn=True
+REINST_BP_Unit_Anim_Auto_C_122.Input=True
+REINST_BP_Unit_Anim_Auto_C_122.Actor=True
+BP_ATBTT_C.Tick=True
+BP_ATBTT_C.Default=True
+BP_ATBTT_C.GameMode=True
+BP_ATBTT_C.Classes=True
+BP_ATBTT_C.Game=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/EncounterScene/GameMode/LayersManager.LayersManager;
@@ -1218,7 +1262,7 @@ K2Node_SwitchName="\"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object.PinOptions.PinNames\" "
 K2Node=
 EdGraphNode=
-Object=
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 EncounterSetting_C="\"Object.Default.mapStatus\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Player_C=
@@ -1229,13 +1273,18 @@ BP_GridActor_C=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 EncouterTestSettings_C=
-BP_Unit_Anim_Auto_C="\"Object.Config.Config|GridPlacement\" "
-BP_Unit_Anim_C="\"Object.Config.Config|GridPlacement\" "
+BP_Unit_Anim_Auto_C=
+BP_Unit_Anim_C=
 BP_Unit_C=
 Character=
 Pawn=
-REINST_BP_Unit_Anim_Auto_C_1245="\"Object.Config.Config|GridPlacement\" "
-REINST_BP_Unit_Anim_Auto_C_1249="\"Object.Config.Config|GridPlacement\" "
+REINST_BP_Unit_Anim_Auto_C_1245="\"Object.Config.Config"
+REINST_BP_Unit_Anim_Auto_C_1249="\"Object.Config.Config"
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1298,8 +1347,8 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [RootWindow]
-ScreenPosition=X=-1535.200 Y=0.800
-WindowSize=X=1526.400 Y=814.400
+ScreenPosition=X=0.000 Y=0.000
+WindowSize=X=1526.400 Y=808.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1918,6 +1967,8 @@ ExternalImagePicker.TimeStamp=2018.05.04-06.08.33
 ExternalImagePicker.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2018.05.04-06.08.42
 TextureEditor.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2018.05.04-06.08.35
+LauncherServices.LastCompileMethod=Unknown
 
 [MessageLog]
 LastLogListing=PIE
