Updated GUI in encounter map and fixed return from encounter problem

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,16 +83,12 @@ LastLevel=/Game/Map/ULA
 
 [AssetEditorManager]
 CleanShutdown=False
-<<<<<<< HEAD
 OpenAssetsAtExit=/Game/EncounterScene/GameMode/EncounterPanel.EncounterPanel
 OpenAssetsAtExit=/Game/EncounterScene/Blueprints/GoToEncounter.GoToEncounter
 OpenAssetsAtExit=/Game/Encounter.Encounter
 OpenAssetsAtExit=/Game/AdvancedTurnBasedTileToolkit/Units/BP_Unit_Anim_Auto.BP_Unit_Anim_Auto
-OpenAssetsAtExit=/Game/AdvancedTurnBasedTileToolkit/Core/BP_ATBTT.BP_ATBTT
-OpenAssetsAtExit=/Game/Map/ULA.ULA:PersistentLevel.ULA
-OpenAssetsAtExit=/Game/AdvancedTurnBasedTileToolkit/Maps/MP/Core/BP_Instance_ATBTT.BP_Instance_ATBTT
-=======
->>>>>>> d386c43153a88e834529015a8513d28f0eed3f7a
+OpenAssetsAtExit=/Game/EncounterScene/GameMode/LayersManager.LayersManager
+OpenAssetsAtExit=/Game/EncounterScene/Blueprints/EncouterTestSettings.EncouterTestSettings
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -944,7 +940,7 @@ MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
 Texture2D.Compression=True
-Texture2D.LevelOfDetail=True
+Texture2D.LevelOfDetail=False
 Texture2D.Texture=True
 Texture2D.File Path=True
 Texture2D.Adjustments=True
@@ -1241,6 +1237,25 @@ BP_ATBTT_C.Default=True
 BP_ATBTT_C.GameMode=True
 BP_ATBTT_C.Classes=True
 BP_ATBTT_C.Game=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+Font.Font=True
+Font.RuntimeFont=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/EncounterScene/GameMode/LayersManager.LayersManager;
@@ -1265,7 +1280,7 @@ K2Node_SwitchName="\"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object.PinOptions.PinNames\" "
 K2Node=
 EdGraphNode=
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+Object=
 EncounterSetting_C="\"Object.Default.mapStatus\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Player_C=
@@ -1276,26 +1291,23 @@ BP_GridActor_C=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 EncouterTestSettings_C=
-<<<<<<< HEAD
 BP_Unit_Anim_Auto_C=
 BP_Unit_Anim_C=
-=======
-BP_Unit_Anim_Auto_C="\"Object.Config.Config"
-BP_Unit_Anim_C="\"Object.Config.Config"
->>>>>>> d386c43153a88e834529015a8513d28f0eed3f7a
 BP_Unit_C=
 Character=
 Pawn=
 REINST_BP_Unit_Anim_Auto_C_1245="\"Object.Config.Config"
 REINST_BP_Unit_Anim_Auto_C_1249="\"Object.Config.Config"
-<<<<<<< HEAD
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-=======
->>>>>>> d386c43153a88e834529015a8513d28f0eed3f7a
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
+Image="\"Object.Appearance.Brush\" "
+ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" "
+Font="\"Object.Font\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -2025,6 +2037,14 @@ LastLogListing=PIE
 /Game/Sprites/Layer_Material.Layer_Material=0
 /Game/Sprites/Layer_Material_Inst.Layer_Material_Inst=0
 /Game/EncounterScene/Blueprints/EncouterTestSettings.EncouterTestSettings=0
+/Game/Sprites/Air.Air=0
+/Engine/EngineFonts/Roboto.Roboto=0
+/Game/Sprites/GUI/Window.Window=0
+/Game/Sprites/GUI/GUI_Mockup_Air.GUI_Mockup_Air=0
+/Game/Sprites/robo2.robo2=0
+/Game/Sprites/Babar1.Babar1=0
+/Game/AdvancedTurnBasedTileToolkit/Core/BP_ATBTT.BP_ATBTT=0
+/Game/EncounterScene/Blueprints/RobotStruct.RobotStruct=0
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -2111,6 +2131,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 [DetailCategoriesAdvanced]
 K2Node_VariableGet.Variable=False
 WidgetBlueprint.ClassOptions=False
+Layer_Change_C.Materials=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
