--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -72,22 +72,26 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Map/MainMenu
-MRUItem1=/Game/Map/ULA
-MRUItem2=/Game/EncounterScene/Map/EncounterMap
-MRUItem3=/Game/AdvancedTurnBasedTileToolkit/Maps/Advanced/JungleRaid
-MRUItem4=/Game/AdvancedTurnBasedTileToolkit/Maps/Example
-MRUItem5=/Game/ULA
+MRUItem0=/Game/Map/Menu
+MRUItem1=/Game/Map/MainMenu
+MRUItem2=/Game/Map/ULA
+MRUItem3=/Game/EncounterScene/Map/EncounterMap
+MRUItem4=/Game/AdvancedTurnBasedTileToolkit/Maps/Advanced/JungleRaid
+MRUItem5=/Game/AdvancedTurnBasedTileToolkit/Maps/Example
+MRUItem6=/Game/ULA
 
 [EditorStartup]
-LastLevel=/Game/Map/MainMenu
+LastLevel=/Game/Map/Menu
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/EncounterScene/GameMode/EncounterPanel.EncounterPanel
-OpenAssetsAtExit=/Game/Encounter.Encounter
-OpenAssetsAtExit=/Game/AdvancedTurnBasedTileToolkit/Units/BP_Unit_Anim_Auto.BP_Unit_Anim_Auto
-OpenAssetsAtExit=/Game/EncounterScene/Blueprints/EncouterTestSettings.EncouterTestSettings
+OpenAssetsAtExit=/MainMenuPlugin/UMG/KeyBindMenuWidget.KeyBindMenuWidget
+OpenAssetsAtExit=/MainMenuPlugin/UMG/KeyBindMenuElement.KeyBindMenuElement
+OpenAssetsAtExit=/MainMenuPlugin/UMG/GameScreenWidget.GameScreenWidget
+OpenAssetsAtExit=/MainMenuPlugin/UMG/GameMenuWidget.GameMenuWidget
+OpenAssetsAtExit=/Game/UI/Menu_HUD.Menu_HUD
+OpenAssetsAtExit=/MainMenuPlugin/UMG/LoadingScreenWidget.LoadingScreenWidget
+OpenAssetsAtExit=/MainMenuPlugin/UMG/MainMenuWidget.MainMenuWidget
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1265,8 +1269,77 @@ MainMenu_C.Tick=True
 MainMenu_C.Replication=True
 MainMenu_C.Input=True
 MainMenu_C.Actor=True
+MainMenu_C.Appearance=True
+MainMenu_C.Designer=True
+MainMenu_C.Interaction=True
+MainMenu_C.Layout=True
+MainMenu_C.Behavior=True
+MainMenu_C.Render Transform=True
+MainMenu_C.Performance=True
+MainMenu_C.Clipping=True
+MainMenu_C.Navigation=True
+MenuHUD_C.Appearance=True
+MenuHUD_C.Designer=True
+MenuHUD_C.Input=True
+MenuHUD_C.Interaction=True
+MenuHUD_C.Layout=True
+MenuHUD_C.Behavior=True
+MenuHUD_C.Render Transform=True
+MenuHUD_C.Performance=True
+MenuHUD_C.Clipping=True
+MenuHUD_C.Navigation=True
+Menu_HUD_C.Tick=True
+Menu_HUD_C.HUD=True
+Menu_C.Tick=True
+Menu_C.Replication=True
+Menu_C.Input=True
+Menu_C.Actor=True
+MainMenuPluginHUDComponent.Variable=True
+MainMenuPluginHUDComponent.Sockets=True
+MainMenuPluginHUDComponent.MainMenuPluginHUDComponent=True
+MainMenuPluginHUDComponent.UI=True
+MainMenuPluginHUDComponent.Tags=True
+MainMenuPluginHUDComponent.ComponentReplication=True
+MainMenuPluginHUDComponent.Activation=True
+MainMenuPluginHUDComponent.Cooking=True
+MainMenuPluginHUDComponent.Events=True
+Button_Wiget_C.Layout=True
+Button_Wiget_C.Default=True
+Button_Wiget_C.Appearance=True
+Button_Wiget_C.Input=True
+Button_Wiget_C.Interaction=True
+Button_Wiget_C.Behavior=True
+Button_Wiget_C.Render Transform=True
+Button_Wiget_C.Performance=True
+Button_Wiget_C.Clipping=True
+Button_Wiget_C.Navigation=True
+GameMenuWidget_C.Appearance=True
+GameMenuWidget_C.Input=True
+GameMenuWidget_C.Interaction=True
+GameMenuWidget_C.Behavior=True
+GameMenuWidget_C.Render Transform=True
+GameMenuWidget_C.Performance=True
+GameMenuWidget_C.Clipping=True
+GameMenuWidget_C.Navigation=True
+SoundCue.Attenuation=True
+SoundCue.AttenuationDistance=True
+SoundCue.AttenuationSpatialization=True
+SoundCue.Sound=True
+SoundCue.AttenuationAirAbsorption=True
+SoundCue.Subtitles=True
+SoundCue.AttenuationListenerFocus=True
+SoundCue.Debug=True
+SoundCue.AttenuationOcclusion=True
+SoundCue.Concurrency=True
+SoundCue.Effects=True
+SoundCue.Info=True
+SoundNodeWavePlayer.WavePlayer=True
+SoundNodeDelay.Delay=True
+SoundNodeLooping.Looping=True
+SoundNodeModulator.Modulation=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Audio/MainMenuTrak.MainMenuTrak;
 RecentlyPlaced=/Game/EncounterScene/GameMode/LayersManager.LayersManager;
 RecentlyPlaced=/Game/EncounterScene/Blueprints/Robot.Robot;
 RecentlyPlaced=/Game/EncounterScene/Blueprints/EncouterTestSettings.EncouterTestSettings;
@@ -1289,7 +1362,7 @@ K2Node_SwitchName="\"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object.PinOptions.PinNames\" "
 K2Node=
 EdGraphNode=
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+Object=
 EncounterSetting_C="\"Object.Default.mapStatus\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Player_C=
@@ -1309,9 +1382,9 @@ REINST_BP_Unit_Anim_Auto_C_1245="\"Object.Config.Config"
 REINST_BP_Unit_Anim_Auto_C_1249="\"Object.Config.Config"
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+PanelWidget=
+Widget=
+Visual=
 Image="\"Object.Appearance.Brush\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" "
 Font="\"Object.Font\" "
@@ -1333,7 +1406,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Map
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1379,9 +1452,9 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [RootWindow]
-ScreenPosition=X=488.667 Y=495.333
+ScreenPosition=X=488.667 Y=494.667
 WindowSize=X=1526.000 Y=808.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2058,6 +2131,8 @@ LastLogListing=PIE
 /Game/EncounterScene/GameMode/LayersManager.LayersManager=1
 /Game/UI/MainMenu.MainMenu=1
 /Game/Map/MainMenu.MainMenu:PersistentLevel.MainMenu=1
+/Game/UI/MenuHUD.MenuHUD=1
+/Game/UI/Menu_HUD.Menu_HUD=1
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -2158,5 +2233,9 @@ bShowGrid=False
 bDrawGrid=False
 PrimType=1
 bWantsMobileStats=False
+
+[WorldBrowser]
+DisplayPaths=False
+DisplayActorsCount=False
 
 
