--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -8,6 +8,7 @@ Paths=../../../Engine/Plugins/Media/MediaCompositing/Content
 Paths=../../../Engine/Plugins/Runtime/AppleARKit/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
+Paths=../../../../../Users/andre/OneDrive/Documents/Unreal Projects/The-Unlucky-Astronautv2/Plugins/MainMenuPlugin/Content
 
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/Default.Default"',Map="/Engine/Maps/Templates/Template_Default")
@@ -33,5 +34,13 @@ FlipNormalMapGreenChannel=False
 
 [FProjectLauncher]
 AdvancedMode=False
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
 
