--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,7 +82,7 @@ MRUItem4=/Game/ULA
 LastLevel=/Game/Map/ULA
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/EncounterScene/GameMode/EncounterPanel.EncounterPanel
 OpenAssetsAtExit=/Game/EncounterScene/Blueprints/GoToEncounter.GoToEncounter
 OpenAssetsAtExit=/Game/Encounter.Encounter
@@ -1324,7 +1324,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/EncounterScene/GameMode
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1372,7 +1372,7 @@ ContentBrowserTab2.CurrentViewType=1
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
 WindowSize=X=1526.400 Y=808.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1388,11 +1388,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../Unreal_Projects/The-Unlucky-Astronautv2/Content/EncounterScene/Map
+UNR=../../../../Unreal_Projects/The-Unlucky-Astronautv2/Content/Map
 BRUSH=../../../../../Users/andre/OneDrive/Documents/Unreal Projects/Ursa/Content/
 FBX=../../../../../Users/andre/OneDrive/Documents/Unreal Projects/Ursa/Content/
 FBXAnim=../../../../../Users/andre/OneDrive/Documents/Unreal Projects/Ursa/Content/
-GenericImport=../../../../../Users/andre/OneDrive/Documents/Unreal Projects/Ursa/Content/
+GenericImport=C:/Users/richb/Downloads/drive-download-20180716T164741Z-001/Air.png
 GenericExport=G:/Users/andre/OneDrive/Documents/GitHub/The-Unlucky-Astronaut/Content
 GenericOpen=../../../../../Users/andre/OneDrive/Documents/Unreal Projects/Ursa/Content/
 GenericSave=../../../../../Users/andre/OneDrive/Documents/Unreal Projects/Ursa/Content/
@@ -1992,6 +1992,8 @@ TextureEditor.TimeStamp=2018.05.04-06.08.42
 TextureEditor.LastCompileMethod=Unknown
 LauncherServices.TimeStamp=2018.05.04-06.08.35
 LauncherServices.LastCompileMethod=Unknown
+FontEditor.TimeStamp=2018.05.04-06.08.34
+FontEditor.LastCompileMethod=Unknown
 
 [MessageLog]
 LastLogListing=PIE
